// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Help /> renders a question mark icon 1`] = `
<i
  className="fas fa-question-circle"
  onClick={null}
  style={Object {}}
/>
`;

exports[`<Help /> renders an OverlayTrigger component 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      id="help-popover"
      placement="right"
      title="test"
    >
      <div
        className="test_div"
      />
    </Popover>
  }
  placement="top"
  rootClose={true}
  trigger="click"
>
  <span
    className="pointer"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="question-circle"
      pullRight={false}
    />
  </span>
</OverlayTrigger>
`;

exports[`<Help /> renders correctly 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      id="help-popover"
      placement="right"
      title="test"
    >
      <div
        className="test_div"
      />
    </Popover>
  }
  placement="top"
  rootClose={true}
  trigger="click"
>
  <span
    className="pointer"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="question-circle"
      pullRight={false}
    />
  </span>
</OverlayTrigger>
`;

exports[`<Help /> renders even when title and pullRight props are missing 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      id="help-popover"
      placement="right"
    >
      <div
        className="test_div"
      />
    </Popover>
  }
  placement="top"
  rootClose={true}
  trigger="click"
>
  <span
    className="pointer"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="question-circle"
      pullRight={false}
    />
  </span>
</OverlayTrigger>
`;
